chore: collapse grpc servers into a single maelstrom server
