# proto/gen/openapiv2/maelstrom/v1/server.swagger.json
@@ -6,7 +6,7 @@
   },
   "tags": [
     {
-      "name": "Blob"
+      "name": "Maelstrom"
     }
   ],
   "consumes": [
@@ -16,10 +16,43 @@
     "application/json"
   ],
   "paths": {
+    "/cosmos/tx/v1beta1/txs": {
+      "post": {
+        "summary": "BroadcastTx mimics the gRPC endpoint for the Cosmos SDK's tx service. This allows easier compatibility\nfor clients. They can simply redirect their endpoint to the Maelstrom service and continue submitting\nBlobTxs. Maelstrom will decode them, verify the signer and signature, extract the blobs and aggregate\nthem with others, eventually submitting them to the main chain",
+        "operationId": "Maelstrom_BroadcastTx",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1BroadcastTxResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/googlerpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/v1BroadcastTxRequest"
+            }
+          }
+        ],
+        "tags": [
+          "Maelstrom"
+        ]
+      }
+    },
     "/v1/balance/{address}": {
       "get": {
         "summary": "Balance",
-        "operationId": "Blob_Balance",
+        "operationId": "Maelstrom_Balance",
         "responses": {
           "200": {
             "description": "A successful response.",
@@ -43,14 +76,14 @@
           }
         ],
         "tags": [
-          "Blob"
+          "Maelstrom"
         ]
       }
     },
     "/v1/cancel": {
       "post": {
         "summary": "Cancel",
-        "operationId": "Blob_Cancel",
+        "operationId": "Maelstrom_Cancel",
         "responses": {
           "200": {
             "description": "A successful response.",
@@ -76,14 +109,14 @@
           }
         ],
         "tags": [
-          "Blob"
+          "Maelstrom"
         ]
       }
     },
     "/v1/info": {
       "get": {
         "summary": "Info",
-        "operationId": "Blob_Info",
+        "operationId": "Maelstrom_Info",
         "responses": {
           "200": {
             "description": "A successful response.",
@@ -99,14 +132,14 @@
           }
         },
         "tags": [
-          "Blob"
+          "Maelstrom"
         ]
       }
     },
     "/v1/pending_withdrawal/{address}": {
       "get": {
         "summary": "Pending Withdrawal",
-        "operationId": "Blob_PendingWithdrawal",
+        "operationId": "Maelstrom_PendingWithdrawal",
         "responses": {
           "200": {
             "description": "A successful response.",
@@ -130,14 +163,14 @@
           }
         ],
         "tags": [
-          "Blob"
+          "Maelstrom"
         ]
       }
     },
     "/v1/status/{id}": {
       "get": {
         "summary": "Status",
-        "operationId": "Blob_Status",
+        "operationId": "Maelstrom_Status",
         "responses": {
           "200": {
             "description": "A successful response.",
@@ -162,14 +195,14 @@
           }
         ],
         "tags": [
-          "Blob"
+          "Maelstrom"
         ]
       }
     },
     "/v1/submit": {
       "post": {
         "summary": "Submit",
-        "operationId": "Blob_Submit",
+        "operationId": "Maelstrom_Submit",
         "responses": {
           "200": {
             "description": "A successful response.",
@@ -195,14 +228,14 @@
           }
         ],
         "tags": [
-          "Blob"
+          "Maelstrom"
         ]
       }
     },
     "/v1/withdraw": {
       "post": {
         "summary": "Withdraw",
-        "operationId": "Blob_Withdraw",
+        "operationId": "Maelstrom_Withdraw",
         "responses": {
           "200": {
             "description": "A successful response.",
@@ -228,12 +261,44 @@
           }
         ],
         "tags": [
-          "Blob"
+          "Maelstrom"
         ]
       }
     }
   },
   "definitions": {
+    "abciEvent": {
+      "type": "object",
+      "properties": {
+        "type": {
+          "type": "string"
+        },
+        "attributes": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/abciEventAttribute"
+          }
+        }
+      },
+      "description": "Event allows application developers to attach additional information to\nResponseFinalizeBlock and ResponseCheckTx.\nLater, transactions may be queried using these events."
+    },
+    "abciEventAttribute": {
+      "type": "object",
+      "properties": {
+        "key": {
+          "type": "string"
+        },
+        "value": {
+          "type": "string"
+        },
+        "index": {
+          "type": "boolean",
+          "title": "nondeterministic"
+        }
+      },
+      "description": "EventAttribute is a single key-value pair, associated with an event."
+    },
     "googlerpcStatus": {
       "type": "object",
       "properties": {
@@ -274,6 +339,30 @@
         "celestiaBalance": {
           "type": "string",
           "format": "uint64"
+        }
+      }
+    },
+    "v1BroadcastTxRequest": {
+      "type": "object",
+      "properties": {
+        "txBytes": {
+          "type": "string",
+          "format": "byte",
+          "description": "tx_bytes is the raw transaction."
+        }
+      },
+      "title": "BroadcastTxRequest matches the fields and types of the BroadcastTxRequest\nin the Cosmos SDK"
+    },
+    "v1BroadcastTxResponse": {
+      "type": "object",
+      "properties": {
+        "txResponse": {
+          "$ref": "#/definitions/v1beta1TxResponse"
+        },
+        "id": {
+          "type": "string",
+          "format": "uint64",
+          "title": "the ID is additional information and relates to the ID\nused to track the status of the blob in maelstrom"
         }
       }
     },
@@ -439,6 +528,125 @@
     },
     "v1WithdrawResponse": {
       "type": "object"
+    },
+    "v1beta1ABCIMessageLog": {
+      "type": "object",
+      "properties": {
+        "msgIndex": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "log": {
+          "type": "string"
+        },
+        "events": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/v1beta1StringEvent"
+          },
+          "description": "Events contains a slice of Event objects that were emitted during some\nexecution."
+        }
+      },
+      "description": "ABCIMessageLog defines a structure containing an indexed tx ABCI message log."
+    },
+    "v1beta1Attribute": {
+      "type": "object",
+      "properties": {
+        "key": {
+          "type": "string"
+        },
+        "value": {
+          "type": "string"
+        }
+      },
+      "description": "Attribute defines an attribute wrapper where the key and value are\nstrings instead of raw bytes."
+    },
+    "v1beta1StringEvent": {
+      "type": "object",
+      "properties": {
+        "type": {
+          "type": "string"
+        },
+        "attributes": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/v1beta1Attribute"
+          }
+        }
+      },
+      "description": "StringEvent defines en Event object wrapper where all the attributes\ncontain key/value pairs that are strings instead of raw bytes."
+    },
+    "v1beta1TxResponse": {
+      "type": "object",
+      "properties": {
+        "height": {
+          "type": "string",
+          "format": "int64",
+          "title": "The block height"
+        },
+        "txhash": {
+          "type": "string",
+          "description": "The transaction hash."
+        },
+        "codespace": {
+          "type": "string",
+          "title": "Namespace for the Code"
+        },
+        "code": {
+          "type": "integer",
+          "format": "int64",
+          "description": "Response code."
+        },
+        "data": {
+          "type": "string",
+          "description": "Result bytes, if any."
+        },
+        "rawLog": {
+          "type": "string",
+          "description": "The output of the application's logger (raw string). May be\nnon-deterministic."
+        },
+        "logs": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/v1beta1ABCIMessageLog"
+          },
+          "description": "The output of the application's logger (typed). May be non-deterministic."
+        },
+        "info": {
+          "type": "string",
+          "description": "Additional information. May be non-deterministic."
+        },
+        "gasWanted": {
+          "type": "string",
+          "format": "int64",
+          "description": "Amount of gas requested for transaction."
+        },
+        "gasUsed": {
+          "type": "string",
+          "format": "int64",
+          "description": "Amount of gas consumed by transaction."
+        },
+        "tx": {
+          "$ref": "#/definitions/protobufAny",
+          "description": "The request transaction bytes."
+        },
+        "timestamp": {
+          "type": "string",
+          "description": "Time of the previous block. For heights \u003e 1, it's the weighted median of\nthe timestamps of the valid votes in the block.LastCommit. For height == 1,\nit's genesis time."
+        },
+        "events": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/abciEvent"
+          },
+          "description": "Events defines all the events emitted by processing a transaction. Note,\nthese events include those emitted by processing all the messages and those\nemitted from the ante. Whereas Logs contains the events, with\nadditional metadata, emitted only by processing the messages.\n\nSince: cosmos-sdk 0.42.11, 0.44.5, 0.45"
+        }
+      },
+      "description": "TxResponse defines a structure containing relevant tx data and metadata. The\ntags are stringified and the log is JSON decoded."
     }
   }
 }
